src/objects/Bond__c.object
<CustomObject>
    <description>This object holds information about the bond.</description>
    <fields>
        <fullName>AC_Count__c</fullName>
        <inlineHelpText>The number of assessment contracts in the bond.</inlineHelpText>
        <label>Number of Assessments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Payment__c</fullName>
        <formula>Bond_Cost__c/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Annual Bond Payment Amount (P+I)/term</inlineHelpText>
        <label>Annual Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Blended_Coupon__c</fullName>
        <inlineHelpText>This is the calculated blended coupon rate</inlineHelpText>
        <label>Blended Coupon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bond_Amount__c</fullName>
        <inlineHelpText>The total amount of the bond (Principal) - a rollup of the underlying assessment contracts.</inlineHelpText>
        <label>Bond Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bond_Assignment_Insrutment__c</fullName>
        <inlineHelpText>If it is a bond this will be a copy of the physical bond, if this is an assignment this will a document assignment instrument.</inlineHelpText>
        <label>Bond/Assignment Instrument</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Bond_Cost__c</fullName>
        <inlineHelpText>The total cost of the bond (Payments + Interest) excludes Capitalized Interest and Fees</inlineHelpText>
        <label>Bond Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bond_Counsel_Disbursement__c</fullName>
        <label>Bond Counsel Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bond_Purchaser_Name__c</fullName>
        <label>Bond Purchaser Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bond_Type__c</fullName>
        <inlineHelpText>Is this bonded or an assessment</inlineHelpText>
        <label>Bond Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bonded</fullName>
                </value>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bond_or_Assignment_Cousel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bond or Assignment Cousel</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bonds (Bond or Assignment Cousel)</relationshipLabel>
        <relationshipName>Bonds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Disbursement__c</fullName>
        <label>CF Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capital_Provider_Counsel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capital Provider Counsel</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bonds (Capital Provider Counsel)</relationshipLabel>
        <relationshipName>Bonds3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capitalized_Interest__c</fullName>
        <label>Capitalized Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_of_Issuance__c</fullName>
        <label>Cost of Issuance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coupon__c</fullName>
        <inlineHelpText>The coupon rate of the bond.</inlineHelpText>
        <label>Coupon</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dated_Date__c</fullName>
        <inlineHelpText>Dated Date is the day when interest starts to accrue for a new issue of bonds.</inlineHelpText>
        <label>Dated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debt_Reserve__c</fullName>
        <label>Debt Reserve</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depository_Account__c</fullName>
        <label>Depository Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <inlineHelpText>The first payment date of the bond.</inlineHelpText>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Indenture_Bond_Assignment_Doc__c</fullName>
        <inlineHelpText>If this is a bond this will be the bond indenture, if this is an assignment it will be the Master Assignment and Assumption agreement.</inlineHelpText>
        <label>Indenture/Assignment Agreement</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Interest_Accrual_Date__c</fullName>
        <label>Interest Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issuer_Bond_or_Transferor_Assingment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Issuer if is a Bond or the Transferor if it is an Assignment</inlineHelpText>
        <label>Issuer - Bond or Transferor -Assingment</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bonds</relationshipLabel>
        <relationshipName>Bonds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Indenture_Date__c</fullName>
        <label>Master Indenture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <inlineHelpText>The maturity date of the bond.</inlineHelpText>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Counsel_Notes__c</fullName>
        <inlineHelpText>What role does the other cousel play in the bond/assignment</inlineHelpText>
        <label>Other Counsel Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Counsel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Counsel</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bonds (Other Counsel)</relationshipLabel>
        <relationshipName>Bonds4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <inlineHelpText>This identifies CleanFund to outside parties when we share datatapes.</inlineHelpText>
        <label>Program ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Sponsor_Disbursement__c</fullName>
        <label>Program Sponsor Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Sponsor__c</fullName>
        <label>Program Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>California Statewide Communities Development Authority</fullName>
                </value>
                <value>
                    <fullName>County and City of San Francisco</fullName>
                </value>
                <value>
                    <fullName>Connecticut Green Bank</fullName>
                </value>
                <value>
                    <fullName>SONOMA COUNTY ENERGY INDEPENDENCE PROGRAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Securitization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which securitization is this bond in?</inlineHelpText>
        <label>Securitization</label>
        <referenceTo>Securitization__c</referenceTo>
        <relationshipLabel>Bonds</relationshipLabel>
        <relationshipName>Bonds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Series_Identifier__c</fullName>
        <label>Series Identifier</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Tax_Adminstration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Special Tax Administration or Servicing Agent.</inlineHelpText>
        <label>Special Tax Adminstration</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bonds (Special Tax Adminstration)</relationshipLabel>
        <relationshipName>Bonds2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Admin_Disbursement__c</fullName>
        <label>Tax Admin Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <inlineHelpText>The term of the bond.</inlineHelpText>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tranche_Identifier__c</fullName>
        <inlineHelpText>What tranche or tranches is the CleanFund interest?</inlineHelpText>
        <label>Tranche Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tranche_Notes__c</fullName>
        <inlineHelpText>Describe the structure of the traunche.</inlineHelpText>
        <label>Tranche Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trustee_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If Bond - Bond Trustee
If Assignment -Depositary</inlineHelpText>
        <label>Bond Trustee or Depositary</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bonds</relationshipLabel>
        <relationshipName>Bonds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trustee_Disbursement__c</fullName>
        <label>Trustee Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bond</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Bond Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>